--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/xmail.png" class="img-responsive" alt="Slice of cake">
+                        <img src="/static/img/portfolio/xmail.PNG" class="img-responsive" alt="Slice of cake">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -132,7 +132,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/agex.png" class="img-responsive" alt="Circus tent">
+                        <img src="/static/img/portfolio/agex.PNG" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
@@ -150,7 +150,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I LOVE conding in python.Because of it's simplicity and power</p>
+                    <p>I LOVE conding in python.Because of it's simplicity to learn it and it's power. </p>
                 </div>
                 <div class="col-lg-4">
                     <p>The languages that you see on this app are HTML, CSS, Python and some JavaScript. By using this BootStrap template I saved myself a lot of time. Instead of creating the HTML and CSS from scratch I was able to edit the template to the way I wanted it to look like.</p>
