--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
                     <div class="intro-text">
                         <h1 class="name">Hey there, my name is kebron {{name}}!</h1>
                         <hr class="star-light">
-                        <span class="skills">Python Developer - Flask Framework</span>
+                        <span class="skills">intermediate python programmer</span>
                     </div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I LOVE conding in python.Because of it's simplicity to learn it and it's power. </p>
+                    <p>I LOVE conding in python.Because of it's simplicity to learn it and the best part is that it is powerfull .I am intermediate in coding python but I am always improveing to be a proffesional web developer.  </p>
                 </div>
                 <div class="col-lg-4">
                     <p>The languages that you see on this app are HTML, CSS, Python and some JavaScript. By using this BootStrap template I saved myself a lot of time. Instead of creating the HTML and CSS from scratch I was able to edit the template to the way I wanted it to look like.</p>
@@ -187,7 +187,7 @@
                                 <a href="https://www.youtube.com/channel/UCqrILQNl5Ed9Dz6CGMyvMTQ" class="btn-social btn-outline" target="_blank"><span class="sr-only">YouTube</span><i class="fa fa-fw fa-youtube"></i></a>
                             </li>
                             <li>
-                                <a href="https://github.com/CleverProgrammer" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
+                                <a href="https://github.com/kebrons" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
