--- a/templates/index.html
+++ b/templates/index.html
@@ -184,7 +184,7 @@
                                 <a href="https://www.facebook.com/kebronSZ" target="_blank" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.youtube.com/channel/UCqrILQNl5Ed9Dz6CGMyvMTQ" class="btn-social btn-outline" target="_blank"><span class="sr-only">YouTube</span><i class="fa fa-fw fa-youtube"></i></a>
+                                <a href="https://www.snapchat.com/add/kebron24" class="btn-social btn-outline" target="_blank"><span class="sr-only">Snapchat</span><i class="fa fa-snapchat" aria-hidden="true"></i>
                             </li>
                             <li>
                                 <a href="https://github.com/kebrons" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
@@ -199,7 +199,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Clever Programmer - CP Flask Portfolio 2017 - Created with Love on C9.io
+                        Copyright &copy; kebron solomon zerie 
                     </div>
                 </div>
             </div>
