--- a/templates/index.html
+++ b/templates/index.html
@@ -184,7 +184,7 @@
                                 <a href="https://www.facebook.com/kebronSZ" target="_blank" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.snapchat.com/add/kebron24" class="btn-social btn-outline" target="_blank"><span class="sr-only">Snapchat</span><i class="fa fa-snapchat" aria-hidden="true"></i>
+                                <a href="https://www.snapchat.com/add/kebron24" class="btn-social btn-outline" target="_blank"><span class="sr-only">Snapchat</span><i class="fa fa-snapchat" aria-hidden="true"></i></a>
                             </li>
                             <li>
                                 <a href="https://github.com/kebrons" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
