changed text in skills line and the location
changed skills changed from  intermediate python programmer to  intermediate python delveloper

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
                     <div class="intro-text">
                         <h1 class="name">Hey there, my name is kebron {{name}}!</h1>
                         <hr class="star-light">
-                        <span class="skills">intermediate python programmer</span>
+                        <span class="skills">intermediate python delveloper</span>
                     </div>
                 </div>
             </div>
@@ -170,8 +170,8 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Chicago Illinois,
-                            <br>United States</p>
+                        <p>stavanger bryne,
+                            <br>Norway</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3></h3>
