--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="http://www.pfpenergy.co.uk/media/1213/keeping-it-simple-1.png" alt="" width="389"height="389">                                                    
+                    <img class="img-responsive" src="/static/img/extraa_juicy.PNG" width="389"height="389">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hey there, my name is kebron {{name}}!</h1>
                         <hr class="star-light">
