--- a/templates/add_numbers.html
+++ b/templates/add_numbers.html
@@ -11,7 +11,7 @@
                     <div class="intro-text">
                         <h1 class="name"></h1>
                         <hr class="star-light">
-                        <span class="skills">Let's Add some numbers!</span>
+                        <span class="skills">Let's multiplay some numbers!</span>
                     </div>
                 </div>
             </div>
