--- a/templates/add_numbers.html
+++ b/templates/add_numbers.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %} 
 
-{% block title %}Addition{% endblock %}
+{% block title %}multiplication{% endblock %}
 
 {% block content %}
 
