--- a/templates/index.html
+++ b/templates/index.html
@@ -85,8 +85,8 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="/static/img/extraa_juicy.PNG" width="389"height="389">                                                    
                     <div class="intro-text">
-                        <h1 class="name">Hey there, my name is kebron {{name}}!</h1>
-                        <hr class="star-light">
+                        <h1 class="name">Hey {{name}}, my name is kebron !</h1>
+                        <hr class="star-dark">
                         <span class="skills">intermediate python delveloper</span>
                     </div>
                 </div>
