--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
                     <img class="img-responsive" src="/static/img/extraa_juicy.PNG" width="200"height="178">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hey {{name}}, my name is kebron !</h1>
-                        <hr class="star-dark">
+                        <hr class="star-light">
                         <span class="skills">intermediate python delveloper</span>
                     </div>
                 </div>
