--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://github.com/kebrons/tkinter-apps/blob/master/days%20untill.py" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/kebrons/tkinter-apps/tree/master/days_untill" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -116,7 +116,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://github.com/kebrons/tkinter-apps/blob/master/xmail.py/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/kebrons/tkinter-apps/tree/master/xmail" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -126,7 +126,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://github.com/kebrons/tkinter-apps/blob/master/agex.py" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/kebrons/tkinter-apps/tree/master/agex" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -199,7 +199,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; kebron solomon zerie 
+                        Copyright &copy; 2017 kebron solomon zerie - portfolio 
                     </div>
                 </div>
             </div>
