--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/chesstastic.jpeg" target="_blank" class="img-responsive" alt="Chesstastic">
+                        <img src="https://www.qld.gov.au/__data/assets/image/0021/6195/feel-good-food-safety-tile.png" target="_blank" class="Graphic of mother and child in kitchen">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
