--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fpassle-net.s3.amazonaws.com%2FPassle%2F52bc3e2f3d94740c20c766ed%2FProcessedImages%2F52bc2a643d94740c20c757ae%2F2018-08-14-9-32-27-293-5b72a1abf86dd60620709bc0_5000x500.jpg&imgrefurl=http%3A%2F%2Fnightswapping.passle.net%2F&docid=9UBa1SrT2Q1dSM&tbnid=8URSUz-HyYdUFM%3A&vet=10ahUKEwjTvp2cqdvfAhWSFYgKHd1pDS0QMwgpKAEwAQ..i&w=500&h=292&bih=939&biw=1680&q=yakitori&ved=0ahUKEwjTvp2cqdvfAhWSFYgKHd1pDS0QMwgpKAEwAQ&iact=mrc&uact=8" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hey Gabe {{name}}!</h1>
                         <hr class="star-light">
