--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/cleverprogrammer.png" class="img-responsive" alt="Slice of cake">
+                        <img src="https://www.google.com/imgres?imgurl=http%3A%2F%2Fhonesttopaws.com%2Fwp-content%2Fuploads%2Fsites%2F5%2F2017%2F05%2Fbanana-cat-1.png&imgrefurl=http%3A%2F%2Fhonesttopaws.com%2Fcats-love-bananas%2F&docid=ACDmWJUUmTHrXM&tbnid=1wHWSqkRGEqxEM%3A&vet=10ahUKEwiZhKiArNvfAhWT-mEKHeUPBB4QMwiXASggMCA..i&w=700&h=370&bih=939&biw=1680&q=cat&ved=0ahUKEwiZhKiArNvfAhWT-mEKHeUPBB4QMwiXASggMCA&iact=mrc&uact=8" class="img-responsive" alt="Slice of cake">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -132,7 +132,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/youtubecp.png" class="img-responsive" alt="Circus tent">
+                        <img src="https://www.google.com/imgres?imgurl=http%3A%2F%2Fhonesttopaws.com%2Fwp-content%2Fuploads%2Fsites%2F5%2F2017%2F05%2Fbanana-cat-1.png&imgrefurl=http%3A%2F%2Fhonesttopaws.com%2Fcats-love-bananas%2F&docid=ACDmWJUUmTHrXM&tbnid=1wHWSqkRGEqxEM%3A&vet=10ahUKEwiZhKiArNvfAhWT-mEKHeUPBB4QMwiXASggMCA..i&w=700&h=370&bih=939&biw=1680&q=cat&ved=0ahUKEwiZhKiArNvfAhWT-mEKHeUPBB4QMwiXASggMCA&iact=mrc&uact=8" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
