--- a/templates/index.html
+++ b/templates/index.html
@@ -187,7 +187,7 @@
                                 <a href="https://sudaneseaustralianlostboysandgirlsofsouthsudan.com/" class="btn-social btn-outline" target="_blank"><span class="sr-only">YouTube</span><i class="fa fa-fw fa-youtube"></i></a>
                             </li>
                             <li>
-                                <a href="https://github.com/CleverProgrammer" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
+                                <a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.psychologytoday.com%2Fsites%2Fdefault%2Ffiles%2Fstyles%2Farticle-inline-half%2Fpublic%2Ffield_blog_entry_images%2F2018-02%2Fvicious_dog_0.png%3Fitok%3DnsghKOHs&imgrefurl=https%3A%2F%2Fwww.psychologytoday.com%2Fau%2Fblog%2Fanimals-and-us%2F201802%2Fwhy-certain-people-are-more-likely-be-attacked-dog&docid=-tUveIUF6lC7-M&tbnid=rHT5kn7li-uh6M%3A&vet=10ahUKEwiS3OfrsdvfAhUWa94KHeg2DaoQMwhtKAQwBA..i&w=320&h=276&bih=939&biw=1680&q=dog&ved=0ahUKEwiS3OfrsdvfAhUWa94KHeg2DaoQMwhtKAQwBA&iact=mrc&uact=8" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
