--- a/templates/python_apps.html
+++ b/templates/python_apps.html
@@ -7,11 +7,11 @@
    <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="">
+                    <img class="img-responsive" src="https://pbs.twimg.com/profile_images/1342851829911138304/B2lhrPdn_400x400.jpg" alt="">
                     <div class="intro-text">
                         <h1 class="name">Simple Python Apps</h1>
                         <hr class="star-light">
-                        <span class="skills">Let's Play!</span>
+                        <span class="skills">Python App Showcase</span>
                     </div>
                 </div>
             </div>
