--- a/templates/password_generator.html
+++ b/templates/password_generator.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %} 
 
-{% block title %}Password Generator{% endblock %}
+{% block title %}password_generator{% endblock %}
 
 {% block content %}
 
