--- a/templates/password_generator.html
+++ b/templates/password_generator.html
@@ -7,11 +7,11 @@
   <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/add.png" alt="">
+                    <img class="img-responsive" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.finance-monthly.com%2F2019%2F03%2Fthe-demise-of-the-password%2F&psig=AOvVaw2vanOieFVplEuPqAx0W5dZ&ust=1611309689376000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKiUw8DirO4CFQAAAAAdAAAAABAD" alt="">
                     <div class="intro-text">
                         <h1 class="name"></h1>
                         <hr class="star-light">
-                        <span class="skills">Let's Add some numbers!</span>
+                        <span class="skills">Generate password</span>
                     </div>
                 </div>
             </div>
