--- a/templates/python_apps.html
+++ b/templates/python_apps.html
@@ -47,7 +47,7 @@
                <div class="row">
                 <div class="col-sm-4 portfolio-item">
                 <h1>Password Generator</h1>
-                    <a href="/add_numbers" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="/password_generator" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
