--- a/templates/password_generator.html
+++ b/templates/password_generator.html
@@ -7,7 +7,7 @@
   <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.finance-monthly.com%2F2019%2F03%2Fthe-demise-of-the-password%2F&psig=AOvVaw2vanOieFVplEuPqAx0W5dZ&ust=1611309689376000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKiUw8DirO4CFQAAAAAdAAAAABAD" alt="">
+                    <img class="img-responsive" src="https://images.theconversation.com/files/186076/original/file-20170914-8971-1bvg0di.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip" alt="">
                     <div class="intro-text">
                         <h1 class="name"></h1>
                         <hr class="star-light">
