--- a/templates/password_generator.html
+++ b/templates/password_generator.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Add Numbers</h2>
+                    <h2>Generate Password</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -36,7 +36,7 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="name">Enter Numbers</label>
-                                <input type="text" name="text" class="form-control" placeholder="Please Enter Numbers" name="my-form" id="name" required data-validation-required-message="Please enter your name.">
+                                <input type="text" name="text" class="form-control" placeholder="Here you can generate a 256-Bit Password" name="my-form" id="name" required data-validation-required-message="Please enter your name.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div> 
@@ -45,7 +45,7 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12 col-lg-offset-2">
-                                <button type="submit" class="btn btn-success btn-lg">Calculate</button>
+                                <button type="submit" class="btn btn-success btn-lg">Generate Password</button>
                                 <h2 class="col-lg-12 text-right"></h2>
                             </div>
                         </div>
