--- a/templates/password_generator.html
+++ b/templates/password_generator.html
@@ -35,8 +35,8 @@
                     <form name="sentMessage" id="contactForm" action="/generate_password" method="POST">
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="name">Enter Numbers</label>
-                                <input type="text" name="text" class="form-control" placeholder="Here you can generate a 256-Bit Password" name="my-form" id="name" required data-validation-required-message="Please enter your name.">
+                                <label for="name">Here you can generate a 256-Bit Password</label>
+                           <!--     <input type="text" name="text" class="form-control" placeholder="Here you can generate a 256-Bit Password" name="my-form" id="name" required data-validation-required-message="Please enter your name."> -->
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div> 
