--- a/templates/index.html
+++ b/templates/index.html
@@ -126,7 +126,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://https://www.youtube.com/channel/UCJrZihON-ovVsoIpNVG-7qw" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="/password_generator" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
