--- a/templates/password_generator.html
+++ b/templates/password_generator.html
@@ -11,7 +11,7 @@
                     <div class="intro-text">
                         <h1 class="name"></h1>
                         <hr class="star-light">
-                        <span class="skills">Generate password</span>
+                        <span class="skills">Generates a 256-bit password using python</span>
                     </div>
                 </div>
             </div>
