--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://pbs.twimg.com/profile_images/1342851829911138304/B2lhrPdn_400x400.jpg" class="img-responsive" alt="Circus tent">
+                        <img src="/static/img/generate_password.JPG" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
